tests/baselines/reference/computedPropertyBindingElementDeclarationNoCrash1.errors.txt
computedPropertyBindingElementDeclarationNoCrash1.ts(12,21): error TS2345: Argument of type '{ [x: string]: unknown; }' is not assignable to parameter of type 'State'.
  Type '{ [x: string]: unknown; }' is missing the following properties from type 'State': a, b


==== computedPropertyBindingElementDeclarationNoCrash1.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/61351
    
    export type State = {
      a: number;
      b: string;
    };
    
    export class Test {
      setState(state: State) {}
      test = (e: any) => {
        for (const [key, value] of Object.entries(e)) {
          this.setState({
                        ~
            [key]: value,
    ~~~~~~~~~~~~~~~~~~~~~
          });
    ~~~~~~~
!!! error TS2345: Argument of type '{ [x: string]: unknown; }' is not assignable to parameter of type 'State'.
!!! error TS2345:   Type '{ [x: string]: unknown; }' is missing the following properties from type 'State': a, b
        }
      };
    }
    